fix minor spacing and sizing issues

--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -24,8 +24,9 @@ header {
   @include mq(medium) {
     display: grid;
     padding-top: 80px;
-    grid-template-columns: 520px 1fr;
+    grid-template-columns: 550px 1fr;
     grid-template-rows: 1fr;
+    width: 100vw;
   }
 }
 h1 {
